@@ -41,15 +41,18 @@ public:
 	option_base(char const * option_name, char short_name,
 		    char const * help_str, char const * arg_help_str,
 		    void * data, int popt_flags);
+
 	virtual ~option_base() {}
 
 	/**
 	 * post_process - perform any necessary post-processing
 	 */
 	virtual void post_process() {}
+
 protected:
 	char const * option_name;
 };
+
 
 /** the popt array singleton options */
 static vector<poptOption> popt_options;
@@ -63,9 +66,8 @@ static void help_callback(poptContext con,  enum poptCallbackReason reason,
 			  struct poptOption const * opt,
 			  char const *, void const *)
 {
-	if (reason != POPT_CALLBACK_REASON_OPTION) {
+	if (reason != POPT_CALLBACK_REASON_OPTION)
 		return;
-	}
 
 	if (!strcmp(opt->longName, "help")) {
 		poptPrintHelp(con, stdout, 0);
@@ -82,9 +84,11 @@ static void help_callback(poptContext con,  enum poptCallbackReason reason,
 	exit(EXIT_SUCCESS);
 }
 
+
 static int showvers;
 
-static struct poptOption HelpOptions[] = {
+// FIXME: why is this a separate table to appended_options ?
+static struct poptOption help_options[] = {
   // C cast needed, pointer to function to void *
   { 0, '\0', POPT_ARG_CALLBACK, (void*)help_callback, 0, 0, 0L, },
   { "help", '?', POPT_ARG_NONE, 0, 0, "Show this help message", 0L },
@@ -92,17 +96,19 @@ static struct poptOption HelpOptions[] = {
   POPT_TABLEEND
 };
 
+
 static struct poptOption appended_options[] = {
   { "version", 'v', POPT_ARG_NONE, &showvers, 0, "show version", NULL, },
-  { NULL, '\0', POPT_ARG_INCLUDE_TABLE, HelpOptions, 0, "Help options:", 0 },
+  { NULL, '\0', POPT_ARG_INCLUDE_TABLE, help_options, 0, "Help options:", 0 },
   POPT_TABLEEND
   };
+
 
 /* options parameter can't be a local variable because caller can use the
  * returned poptContext which contains  pointer inside the options array */
 static poptContext do_parse_options(int argc, char const ** argv,
-				    vector<poptOption>& options,
-				    vector<string> & additional_params)
+                                    vector<poptOption> & options,
+                                    vector<string> & additional_params)
 {
 	options = popt_options;
 
@@ -130,45 +136,24 @@ static poptContext do_parse_options(int argc, char const ** argv,
 	return con;
 }
 
+
 void parse_options(int argc, char const ** argv,
-		   vector<string> & additional_params,
-		   string const & additional_help)
+                   vector<string> & additional_params,
+                   string const & additional_help)
 {
 	user_help_str = additional_help;
 
 	vector<poptOption> options;
 
-	poptContext con = do_parse_options(argc, argv, options,
-					   additional_params);
+	poptContext con =
+		do_parse_options(argc, argv, options, additional_params);
 
 	poptFreeContext(con);
 }
 
-void parse_options(int argc, char const ** argv, string & additional_param,
-		   string const & additional_help)
-{
-	user_help_str = additional_help;
-
-	vector<poptOption> options;
-	vector<string> additional_params;
-	poptContext con = do_parse_options(argc, argv, options,
-					   additional_params);
-
-	if (additional_params.size() > 1) {
-		cerr << "too many arguments\n";
-		poptPrintHelp(con, stdout, 0);
-		cout << user_help_str;
-		poptFreeContext(con);
-		exit(EXIT_FAILURE);
-	}
-
-	if (additional_params.size() == 1)
-		additional_param = additional_params[0];
-
-	poptFreeContext(con);
-}
 
 template <class T> class option_imp;
+
 
 /**
  * option<void> - a binary option
@@ -179,14 +164,17 @@ template <class T> class option_imp;
 template <> class option_imp<void> : public option_base {
 public:
 	option_imp(bool & value, char const * option_name, char short_name,
-	       char const * help_str);
+	           char const * help_str);
+
 	~option_imp() {}
 
 	void post_process();
+
 private:
 	bool & value;
 	int popt_value;
 };
+
 
 /**
  * option<int> - a integer option
@@ -196,9 +184,11 @@ private:
 template <> class option_imp<int> : public option_base {
 public:
 	option_imp(int & value, char const * option_name, char short_name,
-	       char const * help_str, char const * arg_help_str);
+	           char const * help_str, char const * arg_help_str);
+
 	~option_imp() {}
 };
+
 
 /**
  * option<string> - a string option
@@ -208,15 +198,19 @@ public:
 template <> class option_imp<string> : public option_base {
 public:
 	option_imp(string & value,char const * option_name,
-		   char short_name, char const * help_str,
-		   char const * arg_help_str);
+	           char short_name, char const * help_str,
+	           char const * arg_help_str);
+
 	void post_process();
+
 	~option_imp() {}
+
 private:
 	// we need an intermediate char array to pass to popt libs
 	char * popt_value;
 	string & value;
 };
+
 
 /**
  * option< vector<string> > - a string vector option
@@ -227,11 +221,14 @@ private:
 template <> class option_imp< vector<string> > : public option_base {
 public:
 	option_imp(vector<string> & value,
-		   char const * option_name, char short_name,
-		   char const * help_str, char const * arg_help_str,
-		   char separator = ',');
+	           char const * option_name, char short_name,
+	           char const * help_str, char const * arg_help_str,
+	           char separator = ',');
+
 	void post_process();
+
 	~option_imp() {}
+
 private:
 	vector<string> & value;
 	// we need an intermediate char array to pass to popt libs
@@ -239,74 +236,71 @@ private:
 	char const separator;
 };
 
+
 option::~option()
 {
 	delete the_option;
 }
 
-/** non templatized ctor for boolean option */
-option::option(bool & value, char const * option_name, char short_name,
-	       char const * help_str)
-	: the_option(new option_imp<void>(value, option_name, short_name,
-					  help_str))
+
+/// non templatized ctor for boolean option
+option::option(bool & value, char const * name, char short_name, char const * help)
+	: the_option(new option_imp<void>(value, name, short_name, help))
 {
 }
 
-/** specialization of option ctor for integer option */
+
+/// specialization of option ctor for integer option
 template <>
-option::option(int & value, char const * option_name,
-	       char short_name, char const * help_str,
-	       char const * arg_help_str)
-	: the_option(new option_imp<int>(value, option_name, short_name,
-					  help_str, arg_help_str))
+option::option(int & value, char const * name, char short_name,
+               char const * help, char const * arg_help)
+	: the_option(new option_imp<int>
+			(value, name, short_name, help, arg_help))
 {
 }
 
-/** specialization of option ctor for string option */
+
+/// specialization of option ctor for string option
 template <>
-option::option(string & value, char const * option_name,
-	       char short_name, char const * help_str,
-	       char const * arg_help_str)
-	: the_option(new option_imp<string>(value, option_name, short_name,
-					  help_str, arg_help_str))
+option::option(string & value, char const * name, char short_name,
+               char const * help, char const * arg_help)
+	: the_option(new option_imp<string>
+			(value, name, short_name, help, arg_help))
 {
 }
 
-/** specialization of option ctor for vector<string> option */
+
+/// specialization of option ctor for vector<string> option
 template <>
-option::option(vector<string> & value,
-	       char const * option_name, char short_name,
-	       char const * help_str, char const * arg_help_str)
-	: the_option(new option_imp< vector<string> >(value, option_name,
-						      short_name, help_str,
-						      arg_help_str))
+option::option(vector<string> & value, char const * name, char short_name,
+               char const * help, char const * arg_help)
+	: the_option(new option_imp< vector<string> >
+			(value, name, short_name, help, arg_help))
 {
 }
 
-option_base::option_base(char const * option_name_, char short_name,
-			 char const * help_str, char const * arg_help_str,
-			 void * data, int popt_flags)
-	:
-	option_name(option_name_)
+
+option_base::option_base(char const * name, char short_name,
+                         char const * help, char const * arg_help,
+                         void * data, int popt_flags)
+	: option_name(name)
 {
-	poptOption opt = { option_name, short_name, popt_flags,
-			     data, 0, help_str, arg_help_str};
+	poptOption const opt = { name, short_name, popt_flags,
+	                         data, 0, help, arg_help };
 
 	popt_options.push_back(opt);
 
 	options_list.push_back(this);
 }
 
-option_imp<void>::option_imp(bool & value_,
-			     char const * option_name, char short_name,
-			     char const * help_str)
-	:
-	option_base(option_name, short_name, help_str, 0, &popt_value,
-		    POPT_ARG_NONE),
-	value(value_),
-	popt_value(0)
+
+option_imp<void>::option_imp(bool & val, char const * name, char short_name,
+                             char const * help)
+	: option_base(name, short_name, help, 0, &popt_value, POPT_ARG_NONE),
+	  value(val), popt_value(0)
 {
 }
+
 
 void option_imp<void>::post_process()
 {
@@ -318,25 +312,22 @@ void option_imp<void>::post_process()
 	}
 }
 
-option_imp<int>::option_imp(int & value, char const * option_name,
-			    char short_name, char const * help_str,
-			    char const * arg_help_str)
-	:
-	option_base(option_name, short_name, help_str, arg_help_str, &value,
-		    POPT_ARG_INT)
+
+option_imp<int>::option_imp(int & value, char const * name, char short_name,
+                            char const * help, char const * arg_help)
+	: option_base(name, short_name, help, arg_help, &value, POPT_ARG_INT)
 {
 }
 
-option_imp<string>::option_imp(string & value_, char const * option_name,
-			       char short_name, char const * help_str,
-			       char const * arg_help_str)
-	:
-	option_base(option_name, short_name, help_str, arg_help_str,
-		    &popt_value, POPT_ARG_STRING),
-	popt_value(0),
-	value(value_)
+
+option_imp<string>::option_imp(string & val, char const * name, char short_name,
+                               char const * help, char const * arg_help)
+	: option_base(name, short_name, help, arg_help,
+                      &popt_value, POPT_ARG_STRING),
+	  popt_value(0), value(val)
 {
 }
+
 
 void option_imp<string>::post_process()
 {
@@ -346,19 +337,17 @@ void option_imp<string>::post_process()
 	}
 }
 
-option_imp< vector<string> >::option_imp(vector<string> & value_,
-				 char const * option_name, char short_name,
-				 char const * help_str,
-				 char const * arg_help_str,
-				 char separator_)
-	:
-	option_base(option_name, short_name, help_str, arg_help_str,
-		    &popt_value, POPT_ARG_STRING),
-	value(value_),
-	popt_value(0),
-	separator(separator_)
+
+option_imp< vector<string> >::option_imp(vector<string> & val,
+                                         char const * name, char short_name,
+                                         char const * help,
+                                         char const * arg_help, char sepchar)
+	: option_base(name, short_name, help, arg_help,
+	              &popt_value, POPT_ARG_STRING),
+	  value(val), popt_value(0), separator(sepchar)
 {
 }
+
 
 void option_imp< vector<string> >::post_process()
 {
