@@ -1,3 +1,9 @@
+2003-05-25  John Levon  <levon@movementarian.org>
+
+	* libopt++/popt_options.h:
+	* libopt++/popt_options.cpp: obvious cleanup,
+	remove some dead code
+
 2003-05-25  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* libpp/format_flags: cf_image_name new column_flags flag
